:bug: Recover lost wrap icon

--- a/frontend/resources/styles/main/partials/debug-icons-preview.scss
+++ b/frontend/resources/styles/main/partials/debug-icons-preview.scss
@@ -61,8 +61,7 @@
 
   .cursor-item div,
   .icon-item-old svg {
-    fill: #aab5ba;
-    stroke: none;
+    stroke: #aab5ba;
   }
 
   .cursor-item {
